--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -56,53 +56,50 @@
     background-image: url(../../assets/icons/scholarship.png);
 }
 
+.education p {
+    letter-spacing: normal;
+}
+
 .complementary-icon {
     background-image: url(../../assets/icons/puzzle.png);
-}
-
-.course .text-description {
-    width: fit-content;
-    margin: 0;
-    margin-left: 3%;
-}
-
-.education .course .text-description {
-    width: 100%;
-    margin: 0
-}
-
-.smaller {
-    font-size: 0.8rem;
 }
 
 .smaller-title {
     font-size: 1.5rem;
 }
 
-.medium {
-    font-size: 1.2rem;
-}
 
 .medium-title {
     font-size: 2rem;
 }
 
-.bigger {
-    font-size: 1.6rem;
-    text-align: left;
-}
 
 .course {
     padding: 15px 0;
 }
 
-.course :last-child {
-    width: 60%;
+.course-name {
+    font-size: 1.6rem;
+    text-align: left;
+    background-color: #9060901a;
+}
+
+.course-date {
+    font-size: 0.8rem;
+    text-align: left;
+    font-weight: bolder;
+    color: rgb(97, 96, 96)
+}
+
+.course-description {
+    font-size: 1.2rem;
+    width: 100%;
     text-align: left;
 }
 
+
 article :last-child {
-    border-top: aliceblue 1px solid;
+    border-bottom: aliceblue 1px solid;
 }
 
 @media (min-width: 1200px) {
@@ -111,8 +108,8 @@ article :last-child {
         display: block;
     }
 
-    .education .course .text-description {
-        width: 60%;
+    p.text-description.course-description {
+        width: 80%;
     }
 
     .text-with-icon .text-description {
@@ -128,5 +125,9 @@ article :last-child {
     .about-img {
         display: block;
         height: 100%;
+    }
+
+    .course-name {
+        margin-right: 0
     }
 }
